<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/tin_grey"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:background="@color/transparent"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            app:contentScrim="@color/colorAccent"
            app:expandedTitleMarginStart="@dimen/_16sdp"
            app:expandedTitleMarginEnd="@dimen/_72sdp"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            >

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image_item"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_splash"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:riv_corner_radius_bottom_left="@dimen/_30sdp"
                app:riv_corner_radius_bottom_right="@dimen/_30sdp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@color/white"/>

            <ImageButton
                android:id="@+id/ib_toolbar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/btn_bg"
                android:contentDescription="@string/back_image"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:src="@drawable/ic_back"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/ib_toolbar_fav_unfilled"
                android:contentDescription="@string/fav_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/btn_bg"
                android:src="@drawable/ic_fav_unfilled"
                android:padding="@dimen/_10sdp"
                android:layout_gravity="end"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_bold"
                    android:padding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/category_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"

                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/baseline_access_time_24"
                            android:contentDescription="@string/clock_image"
                            />
                        <TextView
                            android:id="@+id/tv_dish_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_light"
                            android:maxLines="1"
                            android:text="@string/_30_min"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingStart="@dimen/_3sdp"
                            android:paddingEnd="@dimen/_3sdp"


                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/baseline_access_time_24"
                            android:contentDescription="@string/calories"
                            />
                        <TextView
                            android:id="@+id/tv_dish_cal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_light"
                            android:maxLines="1"
                            android:text="@string/_245_cal"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingStart="@dimen/_3sdp"
                            android:paddingEnd="@dimen/_3sdp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"

                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/baseline_access_time_24"
                            android:contentDescription="@string/how_much"
                            />
                        <TextView
                            android:id="@+id/tv_dish_serving"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_light"
                            android:maxLines="1"
                            android:text="@string/_3_person"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_3sdp"
                            android:paddingStart="@dimen/_3sdp"
                            />
                    </LinearLayout>



                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/ingredients"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingTop="@dimen/_18sdp"
            android:fontFamily="@font/gilroy_bold"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_light"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/instructions"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingTop="@dimen/_18sdp"
            android:fontFamily="@font/gilroy_bold"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:cardBackgroundColor="@color/pink"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tv_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_light"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    />



            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/_10sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:background="@drawable/btn_youtube"
            android:text="@string/youtube"
            />


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>